--- a/client/src/components/ProfileNavbar.css
+++ b/client/src/components/ProfileNavbar.css
@@ -1,4 +1,4 @@
-.navbarProfile{
+.profileNavbar{
     position: absolute;
     display: flex;
     flex-flow: row;
@@ -10,20 +10,21 @@
     width: 100%;
 }
 
-.navbarProfile__logo{
+.profileNavbar_logo{
     height: 50px;
 }
 
-.navbarProfile__profile--container{
+.profileNavbar__profile--container{
     display: flex;
+    justify-content: center;
     flex-flow: row;
     align-items: center;
 }
 
-.navbarProfile__profile--icon{
+.profileNavbar__profile--icon{
     content: "";
-    width: 50px;
-    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
     border: 1px #34498C solid;
     border-radius: 25px;
     margin: 0px 10px;
