--- a/client/src/components/ProfileHistoryCard.css
+++ b/client/src/components/ProfileHistoryCard.css
@@ -1,6 +1,6 @@
-.card{
-    height: 100px;
-    width: 200px;
+.historyCard{
+    height: 200px;
+    width: 400px;
     margin: 30px;
     background-color: #ffff ;
     border-radius: 20px;
