--- a/client/src/components/ProfileBackground.css
+++ b/client/src/components/ProfileBackground.css
@@ -2,6 +2,6 @@
     position: absolute;
     z-index: -99;
     width: 100vw;
-    height: 100vh; /* fix */
+    height: inherit; 
     background: url(../images/background.png) no-repeat fixed 100%;
 }
