--- a/client/src/components/ProfileCard.css
+++ b/client/src/components/ProfileCard.css
@@ -1,8 +1,32 @@
 .card{
-    height: 100px;
-    width: 200px;
-    margin: 30px;
-    background-color: #ffff ;
+    height: 170px;
+    width: 300px;
+    margin: 15px;
+    background-color: #ffff;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
+    padding: 25px;
+}
+
+.card__container{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.card__arrow{
+    width: 35%;
+    text-align: center;
+}
+
+.card__info{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.card__range--text{
+    color: #CACACA;
+    text-align: center;
 }
