--- a/client/src/components/ProfileOverview.css
+++ b/client/src/components/ProfileOverview.css
@@ -3,14 +3,15 @@
     flex-flow: row;
     align-items: center;
     justify-content: center;
-    padding-top: 70px;
+    padding: 15px;
+    padding-top: 85px;
 }
 
 .profileOverview__card{
     border-radius: 20px;
-    margin: 30px;
+    margin: 15px;
     overflow: hidden;
-    width: 1000px;
+    width: 100%;
     height: 200px;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
