--- a/client/src/components/Hero.css
+++ b/client/src/components/Hero.css
@@ -6,7 +6,8 @@
     height: 100vh;
     padding: 100px;
     padding-right: 45%;
-    background: url(../images/background.png) no-repeat 100%;
+    background: url(../images/background.png) no-repeat;
+    background-size: cover;
 }
 
 .hero__title{
