--- a/client/src/components/ProfileHistory.css
+++ b/client/src/components/ProfileHistory.css
@@ -1,9 +1,9 @@
 .profileHistory__container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-flow: row wrap;
 }
 
 .profileHistory__h1{
-    margin-left: 30px;
+    margin-left: 50px;
 }
