--- a/client/src/components/ProfileSettings.css
+++ b/client/src/components/ProfileSettings.css
@@ -1,31 +1,68 @@
 .profileSettings{
     display: flex;
-    flex-flow: row;
     align-items: center;
     justify-content: center;
-    padding: 15px;
-    padding-top: 85px;
 }
 
 .profileSettings__card{
+    display: grid;
+    grid-template-columns: 300px auto;
     border-radius: 20px;
-    margin: 15px;
     overflow: hidden;
-    width: 1168px;
-    height: 808px;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
+    width: 1500px;
+    height: 1000px;
 }
 
-.profileSettings__card--headline{
+.profileSettings__nav{
     display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
     align-items: center;
-    color: #f5f5f5;
-    font-size: 30px;
-    font-weight: 400;
-    padding-left: 20px;
-    background-color: #3f3f3f;
-    height: 40px;
+    border-right: 1px #e7e7e7 solid;
+}
+
+.profileSettings__username{
+    margin-bottom: 25px;
+}
+
+.profileSettings__list{
+    list-style: none;
+    width: 100%;
+}
+
+.profileSettings__button{
+    border: none;
+    text-decoration: none;
+    padding: 30px;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.profileSettings__button--active{
+    background-color: #34498C;
+    color: #DFDFDF;
+    transition: 0.2s;
+}
+
+.profileSettings__button:hover {
+    color: #34498C;
+    transition: 0.2s;
+}
+
+.profileSettings__button--active:hover{
+    color: #DFDFDF;
+}
+
+.profileSettings__content{
+    display: flex;
+    flex-flow: column;
+    padding: 50px;
 }
 
 .profileSettings__card--container{
@@ -38,139 +75,46 @@
     margin: 20px;
 }
 
-#username{
-    color: #3f3f3f;
-    margin-left: 70px;
+.profileSettings__content--h1{
+    margin: 50px;
 }
 
-.line{
-    height: 800px;
-    border-left: 2px #DFDFDF solid;
-    right: 1000px;
-    position: absolute;
-}
-
-.accountSet{
-    background-color: #34498C;
-    height: 50px;
-    width: 335px;
-    margin-top: 25px;
-}
-
-#account{
-    font-size: 20pt;
-    color: #ffff;
-}
-
-#accountSettings{
-    color: #3f3f3f;
-    margin-right: 160px;
-    position: absolute;
-    margin-bottom: 700px;
-}
-
-.info{
-    position: absolute;
+.profileSettings__form{
     display: flex;
-    margin-right:-160px;
-    justify-content: left;
+    flex-wrap: wrap;
 }
 
-#infoAccount{
-    color: #3f3f3f;
-    margin-left: 0px;
-    margin-bottom: 390px;
+.profileSettings__form--label{
+    display: flex;
+    flex-flow: column;
+    width: 450px;
+    margin: 50px;
 }
 
-#firstName{
+.profileSettings__form--input{
     background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 50px;
-    position: absolute;
+    border: none;
+    margin: 20px 0px;
+    padding: 20px;
 }
 
-#infoAccount2{
-    color: #3f3f3f;
-    margin-left: 330px;
-    margin-bottom: 390px;
+.profileSettings__submit, .profileSettings__cancel{
+    height: 50px;
+    width: 150px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: 25px;
+    background-color: #34498C;
+    color: #DFDFDF;
+    margin-right: 20px;
 }
 
-#lastName{
+.profileSettings__cancel{
     background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 50px;
-    margin-left: 450px;
-    position: absolute;
-}
-
-#infoAccount3{
-    color: #3f3f3f;
-    margin-left: 0px;
-    margin-top: 150px;
-    position: absolute;
-}
-
-#email{
-    background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 200px;
-    margin-left: 0px;
-    position: absolute;
-}
-
-#infoAccount4{
-    color: #3f3f3f;
-    margin-left: 450px;
-    margin-top: 150px;
-    position: absolute;
-}
-
-#phoneNumber{
-    background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 200px;
-    margin-left: 450px;
-    position: absolute;
-}
-
-#infoAccount5{
-    color: #3f3f3f;
-    margin-left: 0px;
-    margin-top: 300px;
-    position: absolute;
-}
-
-#address{
-    background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 350px;
-    margin-left: 0px;
-    position: absolute;
-}
-
-#infoAccount6{
-    color: #3f3f3f;
-    margin-left: 450px;
-    margin-top: 300px;
-    position: absolute;
-}
-
-#city{
-    background-color: #DFDFDF;
-    border-radius: 5px;
-    width: 300px;
-    height: 30px;
-    margin-top: 350px;
-    margin-left: 450px;
-    position: absolute;
+    color: #000;
 }
