--- a/client/src/components/ProfileCalendar.css
+++ b/client/src/components/ProfileCalendar.css
@@ -1,8 +1,7 @@
 .profileCalendar{
-    height: inherit;
-    width: 900px;
-    margin: 25px;
     background-color: #ffff ;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
+    grid-column: 3/5;
+    grid-row: 1/3;
 }
