--- a/client/src/components/ProfileSettings.css
+++ b/client/src/components/ProfileSettings.css
@@ -2,17 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 1100px;
 }
 
 .profileSettings__card{
     display: grid;
-    grid-template-columns: 300px auto;
+    grid-template-columns: 2fr 8fr;
     border-radius: 20px;
     overflow: hidden;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
-    width: 1500px;
-    height: 1000px;
+
 }
 
 .profileSettings__nav{
@@ -76,7 +76,7 @@
 }
 
 .profileSettings__content--h1{
-    margin: 50px;
+    margin-bottom: 50px;
 }
 
 .profileSettings__form{
@@ -87,8 +87,8 @@
 .profileSettings__form--label{
     display: flex;
     flex-flow: column;
-    width: 450px;
-    margin: 50px;
+    margin: 10px 50px 10px 0px;
+    width: 40%;
 }
 
 .profileSettings__form--input{
