--- a/client/src/components/ProfileTop.css
+++ b/client/src/components/ProfileTop.css
@@ -1,13 +1,14 @@
 .profileTop{
     display: flex;
     flex-flow: row;
+    width: 100%;
 }
 
 .profileTop__card{
     border-radius: 20px;
     margin: 25px;
     overflow: hidden;
-    width: 1500px;
+    width: 100%;
     height: 200px;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
