--- a/client/src/pages/UserPage.css
+++ b/client/src/pages/UserPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+    align-items: center;
     background: url(../images/background.png) fixed no-repeat;
     background-size: cover;
     min-height: 100vh;
