--- a/client/src/components/Calendar.css
+++ b/client/src/components/Calendar.css
@@ -1,8 +1,7 @@
-.historyCard{
-    margin: 50px;
+.calendar{
     background-color: #ffff ;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
-    width: 500px; /* temporary */
-    height: 200px; /* temporary */
+    grid-column: 3/5;
+    grid-row: 1/3;
 }
