--- a/client/src/components/HistoryCard.css
+++ b/client/src/components/HistoryCard.css
@@ -1,7 +1,8 @@
-.profileCalendar{
+.historyCard{
+    margin: 25px;
     background-color: #ffff ;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
-    grid-column: 3/5;
-    grid-row: 1/3;
+    width: 500px; /* temporary */
+    height: 200px; /* temporary */
 }
