--- a/client/src/components/ProfileTop.css
+++ b/client/src/components/ProfileTop.css
@@ -9,8 +9,8 @@
     border-radius: 20px;
     margin: 25px;
     overflow: hidden;
-    width: 100%;
-    height: 200px;
+    width: 55%;
+    height: 140px;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
 }
@@ -34,4 +34,33 @@
 }
 .profileTop__card--row{
     margin: 20px;
+}
+
+.profileTop__card--form{
+    align-items: center;
+    display: flex;
+    width: 25%;
+    height: 140px;
+    background-color: #ffff ;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);   
+}
+
+.profileTop__card--formText{
+    font-size: 20px;
+    position: absolute;
+    text-align: center;
+    margin: 0px 0px 30px 55px;
+}
+
+.profileTop__card--button{
+    width: 50%;
+    height: 30%;
+    border: 1px #FA555F solid;
+    border-radius: 25px;
+    background-color: #FA555F;
+    margin: 70px 0px 0px 85px;
+    line-height: normal;
+    font-size: 16px;
+    color: #ffff
 }
