--- a/client/src/components/ProfileTop.css
+++ b/client/src/components/ProfileTop.css
@@ -6,10 +6,10 @@
 }
 
 .profileTop__card{
-    border-radius: 20px;
+    border-radius: 25px;
     margin: 25px;
     overflow: hidden;
-    width: 55%;
+    width: 100%;
     height: 140px;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
@@ -30,37 +30,57 @@
     display: flex;
     flex-flow: column;
     flex-wrap: wrap;
-    height: 160px;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
 }
 .profileTop__card--row{
     margin: 20px;
 }
 
-.profileTop__card--form{
-    align-items: center;
+.profileTop__card--reminder{
     display: flex;
-    width: 25%;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 25px;
+    margin: 25px;
     height: 140px;
-    background-color: #ffff ;
-    border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);   
+    background-color: #ffff;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
 }
 
-.profileTop__card--formText{
-    font-size: 20px;
-    position: absolute;
+.profileTop__card--reminderContainer{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: 10px;
+}
+
+.profileTop__card--reminderText{
     text-align: center;
-    margin: 0px 0px 30px 55px;
 }
 
 .profileTop__card--button{
-    width: 50%;
-    height: 30%;
+    min-height: 40px;
+    height: 40px;
+    margin: 10px 60px;
+    background-color: rgba(255, 255, 255, 0);
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.2s;
+    width: 150px;
     border: 1px #FA555F solid;
     border-radius: 25px;
+    color: #FA555F;
+}
+
+
+.profileTop__card--button:hover{
+    color: white;
     background-color: #FA555F;
-    margin: 70px 0px 0px 85px;
-    line-height: normal;
-    font-size: 16px;
-    color: #ffff
 }
