Added homepage sections; Work in progress on icons

--- a/client/src/components/Feature.css
+++ b/client/src/components/Feature.css
@@ -1,25 +1,49 @@
 .feature{
-    display: grid;
-    grid-template-rows:  1fr 1fr 1fr;
-    grid-template-columns:  1fr;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;;
     background-color: #34498C;
     height: 100vh;
-    align-items: center;
     overflow: hidden;
 }
 
-.feature__title{
-    color: white;
-    font-size: 5rem;
-    text-align: center;
+.feature__circle{
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    background: #3C569A;
 }
 
-.feature__main{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+.feature__box{
+    width: 5000px;
+    height: 300px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: #3C569A;
+    z-index: 1;
 }
+
+.feature__paragraphs{
+    z-index: 10;
+}
+
+.feature__logo{
+    position: relative;
+}
+
+.feature__logo--img{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    z-index: 10;
+}
+
 .feature__paragraphs{
     display: flex;
     flex-flow: column;
@@ -28,5 +52,5 @@
 }
 
 .feature__p{
-    margin: 30px 0px;
+    margin: 40px 0px;
 }
