--- a/client/src/components/SettingsPassword.css
+++ b/client/src/components/SettingsPassword.css
@@ -25,6 +25,7 @@
     border: none;
     margin: 15px 0px;
     padding: 15px;
+    border-radius: 5px;
 }
 
 .settingsPassword__submit, .settingsPassword__cancel{
