--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,9 +1,12 @@
 .footer{
+    position: relative;
+    margin-top: -40px;
     display: flex;
     flex-flow: row;
     justify-content: space-between;
     align-items: center;
     background-color: #3F3F3F;
+    height: 40px;
     width: 100%;
 }
 
