--- a/client/src/components/ProfileTop.css
+++ b/client/src/components/ProfileTop.css
@@ -19,7 +19,7 @@
     display: flex;
     align-items: center;
     color: #f5f5f5;
-    font-size: 30px;
+    font-size: 1.5rem;
     font-weight: 400;
     padding-left: 20px;
     background-color: #3f3f3f;
