Added CSS to login form; removed link underline

--- a/client/src/components/ProfileSettings.css
+++ b/client/src/components/ProfileSettings.css
@@ -13,6 +13,8 @@
     overflow: hidden;
     background-color: #ffff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
+    height: 800px;
+    width: 1100px;
 }
 
 .profileSettings__nav{
@@ -32,9 +34,12 @@
     width: 100%;
 }
 
+.profileSettings__link{
+    text-decoration: none;
+}
+
 .profileSettings__button{
     border: none;
-    text-decoration: none;
     padding: 30px;
     font-size: 16px;
     font-weight: 600;
@@ -42,6 +47,7 @@
     align-items: center;
     cursor: pointer;
     transition: 0.2s;
+    color: #3F3F3F;
 }
 
 .profileSettings__button--active{
@@ -74,4 +80,5 @@
 .profileSettings__card--row{
     margin: 20px;
 }
+
 
