--- a/client/src/components/ProfileNavbar.css
+++ b/client/src/components/ProfileNavbar.css
@@ -39,6 +39,10 @@
 
 #btn1 { border-right: 0; }
 
+.tab__link{
+    text-decoration: none;
+}
+
 .tab__button{
     display: flex;
     height: 70px;
@@ -46,13 +50,13 @@
     border: none;
     border-left: 1px #e7e7e7 solid;
     border-right: 1px #e7e7e7 solid;
-    text-decoration: none;
     font-size: 16px;
     font-weight: 600;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     transition: 0.2s;
+    color: #3F3F3F;
 }
 
 .tab__indicator{
