--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -30,6 +30,10 @@
     transition: 0.2s;
 }
 
+.navbar__link{
+    text-decoration: none;
+}
+
 .navbar__button--register{
     width: 150px;
     border: 1px #FA555F solid;
@@ -61,4 +65,8 @@
     border: 1px #34498C solid;
     border-radius: 25px;
     margin: 0px 10px;
+}
+
+.navbar__profile--username{
+    color: #3F3F3F;
 }
