--- a/client/src/components/SummaryCard.css
+++ b/client/src/components/SummaryCard.css
@@ -23,6 +23,16 @@
     min-width: 60px;
 }
 
+.card__line{
+    fill: #c4c4c4;
+    margin: 0px 10px;
+    transition: 0.2s;
+    height: 34px;
+    width: 60px;
+    min-height: 34px;
+    min-width: 60px;
+}
+
 .card__arrow:hover{
     transform: rotate(180deg);
     fill: #FA555F;
@@ -34,6 +44,10 @@
     justify-content: center;
     align-items: flex-start;
     margin-left: 25px;
+}
+
+.card__info--inactive{
+    color: #c4c4c4;
 }
 
 .card__range--text{
