--- a/client/src/components/HistoryCard.css
+++ b/client/src/components/HistoryCard.css
@@ -1,8 +1,22 @@
 .historyCard{
-    margin: 25px;
-    background-color: #ffff ;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffff;
     border-radius: 25px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
-    width: 500px; /* temporary */
-    height: 200px; /* temporary */
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 25%);
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+}
+
+.chartContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffff;
+    border-radius: 25px;
+    width: 100%;
+    height: 100%;
 }
