--- a/client/src/components/SetupForm.css
+++ b/client/src/components/SetupForm.css
@@ -1,4 +1,6 @@
-.registerForm{
+.setupForm{
+    position: fixed;
+    scroll-behavior: unset;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -6,22 +8,29 @@
     min-height: 100vh;
     padding: 100px;
     width: 100vw;
-    z-index: -1;
-    background: url(../images/background.png) no-repeat;
-    background-size: cover;
+    height: 100vh;
 }
 
-.registerForm__card{
+.setupForm__background{
+    backdrop-filter: blur(10px);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 25%);
+}
+
+.setupForm__card{
+    z-index: 99;
     display: flex;
     flex-flow: column;
     border-radius: 25px;
     overflow: hidden;
-    background-color: #ffff;
+    background-color: #ffff; 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 25%);
-    min-width: 700px;
+    width: 800px;
 }
 
-.registerForm__header{
+.setupForm__header{
     width: inherit;
     display: flex;
     align-items: center;
@@ -34,36 +43,39 @@
     height: 100px;
 }
 
-.registerForm__form{
+.setupForm__form{
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     padding: 30px 50px;
 }
 
-.registerForm__inputs{
+.setupForm__inputs{
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.registerForm h3{
+
+.setupForm h3{
     min-width: 100px;
 }
 
-.registerForm__h3--center{
+.setupForm__h3--center{
     text-align: center;
 }
 
-.registerForm__label{
+.setupForm__label{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 40%;
 }
 
-.registerForm__input{
+.setupForm__input{
     background-color: #DFDFDF;
     border: none;
     padding: 15px;
@@ -72,13 +84,22 @@
     border-radius: 5px;
 }
 
-.registerForm__buttons{
+.setupForm__agreements{
+    display: flex;
+    flex-flow: column;
+}
+
+.setupForm__checkbox{
+    margin: 10px;
+}
+
+.setupForm__buttons{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.registerForm__submit{
+.setupForm__submit{
     height: 50px;
     width: 200px;
     border: none;
