--- a/client/src/components/ProfileNavbar.css
+++ b/client/src/components/ProfileNavbar.css
@@ -42,17 +42,30 @@
 }
 
 .tab{
+    position: relative;
     display: flex;
     flex-flow: row;
     list-style: none;
     justify-content: center;
     align-items: center;
+    width: 320px;
+    min-width: 320px;
+    height: 70px;
 }
 
 #btn1 { border-right: 0; }
 
 .tab__link{
+    position: absolute;
     text-decoration: none;
+}
+
+.tab__link--left{
+    left: 0;;
+}
+
+.tab__link--right{
+    right: 0;
 }
 
 .tab__button{
@@ -69,14 +82,16 @@
     cursor: pointer;
     transition: 0.2s;
     color: #3F3F3F;
+    
 }
 
 .tab__indicator{
-    height: 3px;
-    width: 160px;
-    left: 0;
-    position: absolute;
+    position:absolute;
+    width:calc(100% / 2);
+    height: 3px; 
     background-color: #34498C;
+    transition:all 500ms ease-in-out;
+    bottom: 0;
 }
 
 .tab__button--active{
