--- a/client/src/components/SettingsNotifications.css
+++ b/client/src/components/SettingsNotifications.css
@@ -52,7 +52,7 @@
     cursor: pointer;
     border-radius: 25px;
     background-color: #34498C;
-    color: #DFDFDF;
+    color: white;
     margin-right: 20px;
 }
 
