--- a/client/src/components/HistoryCard.css
+++ b/client/src/components/HistoryCard.css
@@ -7,7 +7,7 @@
     border-radius: 25px;
     box-shadow: 0px 0px 20px rgb(0 0 0 / 25%);
     width: 100%;
-    height: 100%;
+    height: 400px;
     padding: 30px;
 }
 
