--- a/client/src/components/EverydayForm.css
+++ b/client/src/components/EverydayForm.css
@@ -81,9 +81,10 @@
 
 .everydayForm__symptom{
     display: grid;
-    grid-template-columns: 1fr 2fr 4fr 1fr;
+    grid-template-columns: 1fr 2fr auto 4fr auto;
     grid-gap: 20px;
     align-items: center;
+    justify-content: center;
     margin: 20px 10px;
 }
 
@@ -106,7 +107,7 @@
 
 .everydayForm__symptoms {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     flex-flow: column;
     overflow-y: scroll;
     margin-top: 20px;
