--- a/client/src/components/DailyForm.css
+++ b/client/src/components/DailyForm.css
@@ -41,6 +41,7 @@
     padding-left: 20px;
     background-color: #3f3f3f;
     height: 100px;
+    min-height: 100px;
 }
 
 .dailyForm__form{
@@ -49,6 +50,7 @@
     justify-content: center;
     padding: 30px 50px;
     align-items: center;
+    overflow-y: auto;
 }
 
 .dailyForm__inputs{
@@ -61,7 +63,7 @@
 }
 
 .dailyForm h3{
-    min-width: 100px;
+    min-width: 120px;
 }
 
 .dailyForm__symptom h3{
