--- a/client/src/components/SettingsAccount.css
+++ b/client/src/components/SettingsAccount.css
@@ -40,7 +40,7 @@
     transition: 0.2s;
     cursor: pointer;
     border-radius: 25px;
-    background-color: #34498C;
+    background-color: #ff9100;
     color: white;
     margin-right: 20px;
 }
