--- a/client/src/components/SettingsPassword.css
+++ b/client/src/components/SettingsPassword.css
@@ -39,7 +39,7 @@
     transition: 0.2s;
     cursor: pointer;
     border-radius: 25px;
-    background-color: #ff9100;
+    background-color: #34498C;
     color: white;
     margin-right: 20px;
 }
