--- a/client/src/components/ProfileNavbar.css
+++ b/client/src/components/ProfileNavbar.css
@@ -3,15 +3,14 @@
     flex-flow: row;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(26, 26, 26);
+    background-color: white;
     padding: 20px;
     height: 70px;
     width: 100%;
 }
 
-.profileNavbar__logo{
-    width: 50px;
-    margin-right: 270px;
+.profileNavbar_logo{
+    height: 50px;
 }
 
 .profileNavbar__profile--container{
@@ -23,6 +22,7 @@
 
 .profileNavbar__logout{
     height: 50px;
+    margin: 0px 30px;
     background-color: rgba(255, 255, 255, 0);
     text-align: center;
     text-decoration: none;
@@ -30,15 +30,15 @@
     cursor: pointer;
     transition: 0.2s;
     width: 150px;
-    border: 1px #ff9100 solid;
+    border: 1px #FA555F solid;
     border-radius: 25px;
-    margin-left: 170px;
-    color: #ff9100;
+    margin-right: 0;
+    color: #FA555F;
 }
 
 .profileNavbar__logout:hover{
     color: white;
-    background-color: #ff9100;
+    background-color: #FA555F;
 }
 
 .tab{
@@ -73,15 +73,15 @@
     height: 70px;
     width: 160px;
     border: none;
-    border-left: 1px rgb(26, 26, 26) solid;
-    border-right: 1px rgb(26, 26, 26) solid;
+    border-left: 1px #e7e7e7 solid;
+    border-right: 1px #e7e7e7 solid;
     font-size: 16px;
     font-weight: 600;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     transition: 0.2s;
-    color: white;
+    color: #3F3F3F;
     
 }
 
@@ -89,17 +89,17 @@
     position:absolute;
     width:calc(100% / 2);
     height: 3px; 
-    background-color: #ff9100;
+    background-color: #34498C;
     transition:all 0.2s ease-in-out;
     bottom: 0;
 }
 
 .tab__button--active{
-    color: #ff9100;
+    color: #34498C;
     transition: 0.2s;
 }
 
 .tab__button:hover {
-    color: #ff9100;
+    color: #34498C;
     transition: 0.2s;
 }
