--- a/client/src/components/ProfileSettings.css
+++ b/client/src/components/ProfileSettings.css
@@ -26,7 +26,7 @@
 }
 
 .profileSettings__username{
-    margin: 25px 0px;
+    margin-bottom: 25px;
     text-align: center;
 }
 
@@ -52,13 +52,13 @@
 }
 
 .profileSettings__button--active{
-    background-color: #ff9100;
+    background-color: #34498C;
     color: white;
     transition: 0.2s;
 }
 
 .profileSettings__button:hover {
-    color: #ff9100;
+    color: #34498C;
     transition: 0.2s;
 }
 
